syntax = "proto3";
package experience_reliability_service.dispatch_error_api;

import "common/common.proto";
import "common/money.proto";
import "common/service_client_config.proto";
import "experience_reliability_service/common.proto";
import "experience_reliability_service/order_resolution.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.doordash.ers.api";

service DispatchErrorAPI {
  // for reference: https://github.com/doordash/dd-util-java/wiki/Hermes#hermes-default-behavior
  option (service_client.client_config).service_name = "experience-reliability-service";
  option (service_client.client_config).retry_config.max_attempts = 3;
  option (service_client.client_config).response_attempt_timeout_millis = 30000;
  option (service_client.client_config).circuit_breaker_config.failure_rate_threshold = 1.0;
  option (service_client.client_config).retry_config.initial_wait_millis = 500;
  option (service_client.client_config).retry_config.wait_multiplier = 2.0;

  // All of these methods (except CreateMerchantInitiatedRefund) are in cnr-platform service
  rpc CreateDispatchError(CreateDispatchErrorRequest) returns (DispatchError);
  rpc GetDispatchErrorById(GetDispatchErrorByIdRequest) returns (DispatchError);
  rpc GetDispatchErrorsByIds(GetDispatchErrorsByIdsRequest) returns (DispatchErrorList);
  rpc GetDispatchErrorByDeliveryIds(GetDispatchErrorByDeliveryIdsRequest) returns (DispatchErrorList);
  rpc UpdateDispatchError(PatchDispatchErrorRequest) returns (DispatchError);
  rpc DeleteDispatchError(DeleteDispatchErrorRequest) returns (ers.api.common.EmptyResponse);
  rpc SendDispatchErrorEvent(SendDispatchErrorEventRequest) returns (ers.api.common.EmptyResponse);
  rpc SendDispatchErrorEventByValue(SendDispatchErrorEventByValueRequest) returns (ers.api.common.EmptyResponse);
  // This endpoint continues to be in experience reliability service
  rpc CreateMerchantInitiatedRefund(CreateMerchantInitiatedRefundRequest) returns (CreateMerchantInitiatedRefundResponse);
}

message GetDispatchErrorByIdRequest {
  int64 id = 1;
}

message GetDispatchErrorsByIdsRequest {
  repeated int64 dispatch_error_ids = 1;
}

message GetDispatchErrorByDeliveryIdsRequest {
  repeated int64 delivery_ids = 1;
  repeated string categories = 2;
  google.protobuf.BoolValue category_exclusion = 3;
  google.protobuf.BoolValue never_delivered = 4; //DEPRECATED. DO NOT USE THIS FIELD
  google.protobuf.Timestamp created_before = 5;
  google.protobuf.Timestamp created_after = 6;
  google.protobuf.BoolValue is_store_has_charge_or_refund = 7;
}

message CreateDispatchErrorRequest {
  google.protobuf.Int64Value delivery_id = 1;
  google.protobuf.Int64Value order_id = 2;
  int32 consumer_credits = 3;
  int32 consumer_refund = 4;
  int32 consumer_charge = 5;
  string consumer_explanation = 6;
  string store_explanation = 7;
  int32 store_charge = 8;
  int32 store_refund = 9;
  int32 dasher_penalty = 10;
  google.protobuf.Struct participant_charges = 11;
  google.protobuf.Struct participant_refunds = 12;
  google.protobuf.Struct participant_credits = 13;
  google.protobuf.StringValue currency = 14;
  string category = 15;
  repeated string fault = 16;
  string dispatch_notes = 17;
  google.protobuf.Int64Value shift_id = 18;
  string dasher_explanation = 19;
  google.protobuf.StringValue source = 20;
  google.protobuf.Int64Value transaction_id = 21;
  google.protobuf.Int64Value created_by_id = 22;
  repeated string cre_categories = 23;
  google.protobuf.Int64Value id = 24;
  google.protobuf.StringValue metadata = 25;
  google.protobuf.StringValue delivery_event_category_name = 26;
  bool disable_consumer_refund = 27;
  string idempotency_key = 28;
  google.protobuf.Struct participant_explanations = 29;
  bool provide_full_refund = 30;
  int32 item_component = 31;
  int32 item_tax_component = 32;
  int32 service_fee_component = 33;
  int32 service_fee_tax_component = 34;
  bool skip_processing_payments = 35;
  bool skip_processing_email = 36;
  repeated ers.api.common.DispatchErrorComponentEntry refund_breakdown = 37;
  repeated ers.api.common.DispatchErrorComponentEntry credit_breakdown = 38;
  int32 iterable_campaign_id = 39;
  common.PaymentMethod payment_method = 40;
  repeated ers.api.common.ParticipantCampaignIdEntry participant_campaign_ids = 41;
  google.protobuf.StringValue delivery_uuid = 42;
  repeated ers.api.common.CreditIssuanceInfo credit_issuance_info = 43;
  google.protobuf.Int32Value consumer_loyalty_reward_refund = 44;
  google.protobuf.Int32Value consumer_external_gift_card_refund = 45;
  google.protobuf.Int32Value consumer_ebt_refund = 46;
  google.protobuf.Int32Value consumer_reward_points_refund = 47;
  google.protobuf.Int32Value consumer_hsa_fsa_refund = 48;
  google.protobuf.StringValue return_order_status = 49;
  google.protobuf.Int32Value consumer_cash_refund = 50;
  google.protobuf.Int32Value consumer_external_refund = 51;
}

message SendDispatchErrorEventRequest {
  int64 error_id = 1;
  repeated ers.api.common.DispatchErrorComponentEntry refund_breakdown = 2;
  repeated ers.api.common.DispatchErrorComponentEntry credit_breakdown = 3;
}

message SendDispatchErrorEventByValueRequest {
  int64 error_id = 1;
  repeated ers.api.common.DispatchErrorComponentEntry refund_breakdown = 2;
  repeated ers.api.common.DispatchErrorComponentEntry credit_breakdown = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Int64Value delivery_id = 5;
  google.protobuf.Int64Value order_id = 6;
  int32 consumer_credits = 7;
  int32 consumer_refund = 8;
  int32 consumer_charge = 9;
  int32 store_charge = 10;
  int32 store_refund = 11;
  google.protobuf.StringValue currency = 12;
  string category = 13;
  google.protobuf.StringValue source = 14;
  google.protobuf.Int64Value created_by_id = 15;
}

message PatchDispatchErrorRequest {
  int64 id = 1;
  google.protobuf.Struct data = 2;
}

message DeleteDispatchErrorRequest {
  int64 id = 1;
}

message DispatchError {
  int64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Int64Value delivery_id = 3;
  google.protobuf.Int64Value order_id = 4;
  int32 consumer_credits = 5;
  int32 consumer_refund = 6;
  int32 consumer_charge = 7;
  string consumer_explanation = 8;
  string store_explanation = 9;
  int32 store_charge = 10;
  int32 store_refund = 11;
  int32 dasher_penalty = 12;
  google.protobuf.Struct participant_charges = 13;
  google.protobuf.Struct participant_refunds = 14;
  google.protobuf.Struct participant_credits = 15;
  google.protobuf.StringValue currency = 16;
  string category = 17;
  repeated string fault = 18;
  string dispatch_notes = 19;
  google.protobuf.Int64Value shift_id = 20;
  string dasher_explanation = 21;
  google.protobuf.StringValue source = 22;
  google.protobuf.Int64Value transaction_id = 23;
  google.protobuf.Int64Value created_by_id = 24;
  repeated string cre_categories = 25;
  google.protobuf.Struct participant_explanations = 26;
  google.protobuf.StringValue payment_action = 27;
  money.MonetaryFields consumer_credits_monetary_fields = 28;
  money.MonetaryFields consumer_refund_monetary_fields = 29;
  money.MonetaryFields consumer_loyalty_reward_refund = 30;
  money.MonetaryFields consumer_external_gift_card_refund = 31;
  money.MonetaryFields consumer_ebt_refund = 32;
  money.MonetaryFields consumer_reward_points_refund = 33;
  money.MonetaryFields consumer_hsa_fsa_refund = 34;
  repeated experience_reliability_service.order_resolution.PromotionDetail promotion_details = 35;
  google.protobuf.StringValue return_order_status = 36;
  money.MonetaryFields consumer_cash_refund = 37;
  money.MonetaryFields consumer_external_refund = 38;
}

message DispatchErrorList {
  repeated DispatchError dispatch_errors = 1;
  int32 count = 2;
}

message CreateMerchantInitiatedRefundRequest {
  google.protobuf.StringValue delivery_uuid = 1;
  google.protobuf.StringValue order_item_level_dispute_notes = 2;
  google.protobuf.Int32Value store_refund = 3;
  google.protobuf.Int64Value created_by_id = 4;
  // order level dispute notes
  google.protobuf.StringValue order_dispute_notes = 5;
}

message CreateMerchantInitiatedRefundResponse {
  RefundResponse refund_response = 1;
}

// Enum for CreateMerchantInitiatedRefundResponse for detailed error handling
enum RefundResponse {
  // Default
  REFUND_RESPONSE_UNSPECIFIED = 0;
  // CreateMerchantInitiatedRefund was successful; merchant-payment-adjustment DispatchError created
  REFUND_RESPONSE_SUCCESSFUL = 1;
  // CreateMerchantInitiatedRefund was unsuccessful; delivery is older than 14 days and cannot be refunded
  REFUND_RESPONSE_FAILED_DELIVERY_EXCEEDS_14_DAY_POLICY = 2;
  // CreateMerchantInitiatedRefund was unsuccessful; delivery was already fully/partially refunded
  REFUND_RESPONSE_FAILED_PRIOR_STORE_REFUND_EXISTS_FOR_DELIVERY = 3;
  // CreateMerchantInitiatedRefund was unsuccessful; store refund requested exceeds store charges on this delivery
  REFUND_RESPONSE_FAILED_REQUESTED_STORE_REFUND_GREATER_THAN_STORE_CHARGE = 4;
  // CreateMerchantInitiatedRefund was unsuccessful; there's no error charge to be refunded
  REFUND_RESPONSE_FAILED_DELIVERY_DOES_NOT_CONTAIN_ERROR_CHARGE = 5;
  // CreateMerchantInitiatedRefund was unsuccessful; store exceeds our fraud threshold (i.e. high dispute rate)
  REFUND_RESPONSE_FAILED_REQUESTED_STORE_EXCEEDS_DISPUTE_THRESHOLD = 6;
  // CreateMerchantInitiatedRefund was unsuccessful; store is disallowed from disputing due to company policy infringement
  REFUND_RESPONSE_FAILED_STORE_IS_DISALLOWED_FROM_DISPUTING_DUE_TO_COMPANY_POLICY_INFRINGEMENT = 7;
  // CreateMerchantInitiatedRefund was unsuccessful; user is disallowed from disputing due to company policy infringement
  REFUND_RESPONSE_FAILED_USER_IS_DISALLOWED_FROM_DISPUTING_DUE_TO_COMPANY_POLICY_INFRINGEMENT = 8;
  // CreateMerchantInitiatedRefund was unsuccessful; delivery did not pass one or more fraud heuristics
  REFUND_RESPONSE_FAILED_DELIVERY_DID_NOT_PASS_MX_ERROR_CHARGE_DISPUTE_FRAUD_HEURISTICS = 9;
}
