syntax = "proto3";

package iguazu.events.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/doordash/services-protobuf/generated/iguazu/events";
option java_multiple_files = true;
option java_package = "com.doordash.iguazu.events.v1";

// mx_integrations_retry - emitted for outgoing requests
message MxIntegrationsRetry {
  // The delivery uuid.
  google.protobuf.StringValue delivery_uuid = 1;

  // The external id.
  google.protobuf.StringValue external_id = 2;

  // The delivery id.
  google.protobuf.Int32Value delivery_id = 3;

  // The provider type.
  google.protobuf.StringValue provider_type = 4;

  // The location id.
  google.protobuf.StringValue location_id = 5;

  // The attempt number.
  google.protobuf.Int32Value attempt_number = 6;

  // The status code.
  google.protobuf.Int32Value status_code = 7;

  // The px specific status.
  google.protobuf.StringValue px_specific_status = 8;

  // The time taken in milliseconds.
  google.protobuf.Int64Value time_taken_ms = 9;

  // Whether the event will be retried.
  google.protobuf.BoolValue will_retry = 10;

  // The start time.
  google.protobuf.Timestamp start_time = 11;

  // The end time.
  google.protobuf.Timestamp end_time = 12;

  // request type, eg "ORDER"
  google.protobuf.StringValue request_type = 13;

  // request result, eg "SUCCESS", "CONNECTION_TIMEOUT", "RESPONSE_TIMEOUT"
  google.protobuf.StringValue request_result = 14;

  // retry group â€” "CONTROL", "RETRY", "RETRY_WITH_BACKOFF", etc
  google.protobuf.StringValue retry_behavior = 15;
}
