syntax = "proto3";

package janus_service.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.doordash.rpc.janus_service";

// Notification preference backend updates Segment Event
message PreferenceUpdateSegmentEvent {
  // Profile Id
  string profile_id = 1;
  // Profile Type
  string profile_type = 2;
  // User Id
  string user_id = 3;
  // Project Id
  string project_id = 4;
  // Message Type Id
  string message_type_id = 5;
  // Channel Ids
  string channel_ids = 6;
  // Email
  string email = 7;
  // Experience
  string experience = 8;
  // Is Subscribed
  bool is_subscribed = 9;
  // Work Flow
  string work_flow = 10;
  // Time Stamp
  google.protobuf.Timestamp time_stamp = 11;
}
